--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,93 +1,81 @@
 <html>
+	<head>
+		<!-- Load ioBroker scripts and styles-->
+		<link rel="stylesheet" type="text/css" href="../../css/adapter.css" />
+		<link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css" />
 
-<head>
+		<script type="text/javascript" src="../../lib/js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../../socket.io/socket.io.js"></script>
 
-	<!-- Load ioBroker scripts and styles-->
-	<link rel="stylesheet" type="text/css" href="../../css/adapter.css" />
-	<link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css">
+		<script type="text/javascript" src="../../js/translate.js"></script>
+		<script type="text/javascript" src="../../lib/js/materialize.js"></script>
+		<script type="text/javascript" src="../../js/adapter-settings.js"></script>
 
-	<script type="text/javascript" src="../../lib/js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="../../socket.io/socket.io.js"></script>
+		<!-- Load our own files -->
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<script type="text/javascript" src="words.js"></script>
 
-	<script type="text/javascript" src="../../js/translate.js"></script>
-	<script type="text/javascript" src="../../lib/js/materialize.js"></script>
-	<script type="text/javascript" src="../../js/adapter-settings.js"></script>
+		<script type="text/javascript">
+			// This will be called by the admin adapter when the settings page loads
+			function load(settings, onChange) {
+				// example: select elements with id=key and class=value and insert value
+				if (!settings) return;
+				// load drivers available
+				// TODO
+				$(".value").each(function () {
+					var $key = $(this);
+					var id = $key.attr("id");
+					if ($key.attr("type") === "checkbox") {
+						// do not call onChange direct, because onChange could expect some arguments
+						$key.prop("checked", settings[id]).on("change", () => onChange());
+					} else {
+						// do not call onChange direct, because onChange could expect some arguments
+						$key.val(settings[id])
+							.on("change", () => onChange())
+							.on("keyup", () => onChange());
+					}
+				});
+				onChange(false);
+				// reinitialize all the Materialize labels on the page if you are dynamically adding inputs:
+				if (M) M.updateTextFields();
+			}
 
-	<!-- Load our own files -->
-	<link rel="stylesheet" type="text/css" href="style.css" />
-	<script type="text/javascript" src="words.js"></script>
+			// This will be called by the admin adapter when the user presses the save button
+			function save(callback) {
+				// example: select elements with class=value and build settings object
+				var obj = {};
+				$(".value").each(function () {
+					var $this = $(this);
+					if ($this.attr("type") === "checkbox") {
+						obj[$this.attr("id")] = $this.prop("checked");
+					} else {
+						obj[$this.attr("id")] = $this.val();
+					}
+				});
+				callback(obj);
+			}
+		</script>
+	</head>
 
-	<script type="text/javascript">
-		// This will be called by the admin adapter when the settings page loads
-		function load(settings, onChange) {
-			// example: select elements with id=key and class=value and insert value
-			if (!settings) return;
-			$('.value').each(function () {
-				var $key = $(this);
-				var id = $key.attr('id');
-				if ($key.attr('type') === 'checkbox') {
-					// do not call onChange direct, because onChange could expect some arguments
-					$key.prop('checked', settings[id])
-						.on('change', () => onChange())
-						;
-				} else {
-					// do not call onChange direct, because onChange could expect some arguments
-					$key.val(settings[id])
-						.on('change', () => onChange())
-						.on('keyup', () => onChange())
-						;
-				}
-			});
-			onChange(false);
-			// reinitialize all the Materialize labels on the page if you are dynamically adding inputs:
-			if (M) M.updateTextFields();
-		}
-
-		// This will be called by the admin adapter when the user presses the save button
-		function save(callback) {
-			// example: select elements with class=value and build settings object
-			var obj = {};
-			$('.value').each(function () {
-				var $this = $(this);
-				if ($this.attr('type') === 'checkbox') {
-					obj[$this.attr('id')] = $this.prop('checked');
-				} else {
-					obj[$this.attr('id')] = $this.val();
-				}
-			});
-			callback(obj);
-		}
-	</script>
-
-</head>
-
-<body>
-
-	<div class="m adapter-container">
-
-		<div class="row">
-			<div class="col s12 m4 l2">
-				<img src="ah-mixer.png" class="logo">
+	<body>
+		<div class="m adapter-container">
+			<div class="row">
+				<div class="col s12 m4 l2">
+					<img src="ah-mixer.png" class="logo" />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s6 input-field">
+					<select id="driver" class="value">
+						<option value="sq">SQ Mixer</option>
+					</select>
+					<label for="driver" class="translate">Mixer Type:</label>
+				</div>
+				<div class="col s6 input-field">
+					<input type="text" class="value" id="ip" />
+					<label for="ip" class="translate">IP Address:</label>
+				</div>
 			</div>
 		</div>
-
-		<!-- Put your content here -->
-
-		<!-- For example columns with settings: -->
-		<div class="row">
-			<div class="col s6 input-field">
-				<input type="checkbox" class="value" id="option1" />
-				<label for="option1" class="translate">option1</label>
-			</div>
-
-			<div class="col s6 input-field">
-				<input type="text" class="value" id="option2" />
-				<label for="option2" class="translate">option2</label>
-			</div>
-		</div>
-
-	</div>
-
-</body>
-
+	</body>
 </html>
